fixed gap in weekly attendance dashboard widget

--- a/src/app/children/attendance/attendance-week-dashboard/attendance-week-dashboard.component.scss
+++ b/src/app/children/attendance/attendance-week-dashboard/attendance-week-dashboard.component.scss
@@ -9,7 +9,7 @@
   width: 100%;
   border-collapse: collapse;
 }
-.dashboard-table td:first-child {
+.dashboard-table-first-cell {
   width: 100%;
 }
 
